[tool.poetry]
name = "data-engineer-elt"
version = "0.1.0"
description = ""
authors = ["claytoncampos <clayton.almeida.campos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
astro-sdk-python = "^1.8.0"
apache-airflow-providers-microsoft-azure = "5.3.0"
apache-airflow-providers-microsoft-mssql = "3.3.2"
apache-airflow-providers-postgres = "5.4.0"
apache-airflow-providers-cncf-kubernetes = "5.2.2"
apache-airflow-providers-databricks = "4.0.1"
apache-airflow-providers-snowflake = "4.0.4"
airflow-provider-great-expectations = "0.2.6"
astronomer-providers = "1.15.2"
minio = "^7.2.3"
astro-run-dag = "^0.2.6"
gusty = "0.20.0"
dag-factory = "0.18.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
